--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -3,17 +3,36 @@
   background-image: url("../img/intro-main-desktop.jpg");
   background-repeat: no-repeat;
   background-position: center 0;
-  background-size: 100% 100%;
+  background-size: cover;
   background-color: $basic_color;
   overflow: hidden;
+  @include padding(195px,195px);
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/intro-main-desktop-2x.jpg");
   }
+
+  @media (max-width: $desktop-width) {
+    background-image: url("../img/intro-main-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/intro-main-tablet-2x.jpg");
+    }
+  }
+
+  @media (max-width: $tablet-width) {
+    background-image: url("../img/intro-main-mobile.jpg");
+    padding-top: 200px;
+    padding-bottom: 200px;
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../img/intro-main-mobile-2x.jpg");
+    }
+  }
 }
 
 .info__wrapper {
-  margin: 0 auto;
+  text-align: center;
 }
 
 // .info__wrapper {
@@ -30,116 +49,22 @@
 //   }
 // }
 
-// .info__wrapper > h1 {
-//   @include text(80px, 94px, 700);
-//   letter-spacing: 0.07em;
-//   text-transform: uppercase;
-//   margin-top: 39px;
-//   margin-bottom: 25px;
+.info__wrapper>h1 {
+  @include text(45px, 58px, 700);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 
-//   @media (max-width: $desktop-width) {
-//     @include text(60px, 70px, 700);
-//     margin-bottom: 27px;
-//   }
+  @media (max-width: $tablet-width) {
+    @include text(38px, 48px, 700);
+  }
+}
 
-//   @media (max-width: $tablet-width) {
-//     @include text(40px, 47px, 700);
-//     position: relative;
-//     margin-top: 237px;
-//     z-index: 1;
-//   }
-// }
+.info__wrapper > p {
+  @include text(38px, 49px, 400);
+  font-family: $caption-font;
+  font-style: italic;
 
-// .info__wrapper > p {
-//   @include text(22px, 34px, 400);
-//   position: relative;
-//   padding-left: 94px;
-//   margin-bottom: 44px;
-
-//   @media (max-width: $desktop-width) {
-//     @include text(18px, 28px, 400);
-//     padding-left: 51px;
-//     margin-bottom: 56px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     @include text(16px, 25px, 400);
-//     margin-bottom: 40px;
-//   }
-// }
-
-// .info__wrapper > p::before {
-//   @include pseudo($display: block, $pos: absolute, $content: "");
-//   width: 66px;
-//   height: 2px;
-//   background-color: $basic_white;
-//   left: 0;
-//   top: 17px;
-
-//   @media (max-width: $desktop-width) {
-//     width: 33px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     left: 3px;
-//     top: 15px;
-//   }
-// }
-
-// .info__wrapper > a:nth-child(3n) {
-//   @include text(16px, 18px, 700);
-//   display: block;
-//   text-decoration: none;
-//   font-family: $caption-font;
-//   margin-left: 94px;
-//   padding-top: 20px;
-//   padding-bottom: 17px;
-//   background-color: $background_color;
-//   color: $basic_white;
-//   border: none;
-//   border-radius: 5px;
-//   text-align: center;
-//   letter-spacing: 0.05em;
-//   text-transform: uppercase;
-//   min-height: 55px;
-//   max-width: 407px;
-
-//   @media (max-width: $desktop-width) {
-//     max-width: 379px;
-//     margin-left: 51px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     visibility: hidden;
-//     margin-left: 0;
-//     padding: 0;
-
-//     &::after {
-//       @include pseudo($display: block, $pos: absolute, $content: "Бесплатная консультация");
-//       visibility: visible;
-//       width: 287px;
-//       min-height: 55px;
-//       border-radius: 5px;
-//       padding-top: 20px;
-//       padding-bottom: 17px;
-//       margin-right: 0;
-//       background-color: $background_color;
-//       bottom: 0;
-//     }
-//   }
-// }
-
-// .info__wrapper > a:last-child {
-//   @include text(14px, 16px, 400);
-//   @include pseudo($display: block, $pos: absolute, $content: "");
-//   text-decoration: none;
-//   color: $basic_white;
-//   transform: rotate(-90deg);
-//   opacity: 0.5;
-//   left: -34px;
-//   top: 456px;
-
-//   @media (max-width: $desktop-width) {
-//     display: none;
-//   }
-// }
+  @media (max-width: $tablet-width) {
+    @include text(34px, 44px, 400);
+  }
+}
