--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -13,5 +13,10 @@
 
   @media (max-width: $desktop-width) {
     flex-direction: column;
+
+    .page__closed & {
+      position: absolute;
+      top: -500px;
+    }
   }
 }
