--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,23 +1,17 @@
-// .contacts {
-//   display: grid;
-//   grid-template-columns: 300px 2fr 1fr;
-//   grid-template-areas:
-//     "socials cite adress";
-//   max-width: 1440px;
-//   margin: 0 auto;
-//   padding-bottom: 45px;
+.contacts {
+  display: grid;
+  grid-template-columns: 2fr 2fr 1fr;
+  grid-column-gap: 88px;
 
-//   @media (max-width: $pre-desktop-width) {
-//     grid-template-columns: 1fr 1fr;
-//     grid-template-areas:
-//       "socials socials"
-//       "cite adress";
-//     padding-bottom: 19px;
-//     position: relative;
-//   }
+  @media (max-width: $desktop-width) {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas:
+      "sub sub"
+      "cite socials";
+  }
 
-//   @media (max-width: $tablet-width) {
-//     display: flex;
-//     flex-direction: column;
-//   }
-// }
+  @media (max-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+  }
+}
