--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -4,6 +4,11 @@
   position: $pos;
 }
 
+@mixin padding($top, $bottom) {
+  padding-top: $top;
+  padding-bottom: $bottom;
+}
+
 @mixin push--auto {
   margin: {
     left: auto;
