--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -12,11 +12,11 @@
 @import "blocks/site-list";
 @import "blocks/main-nav";
 @import "blocks/socials";
-@import "blocks/about";
-@import "blocks/types";
+@import "blocks/slider";
+@import "blocks/blog";
 @import "blocks/adress";
 @import "blocks/cite";
-@import "blocks/copyright";
+@import "blocks/subscribe";
 @import "blocks/feedback";
 @import "blocks/modal";
 @import "blocks/button";
