--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,10 +14,10 @@
 @import "blocks/socials";
 @import "blocks/slider";
 @import "blocks/blog";
-@import "blocks/adress";
+@import "blocks/inst";
 @import "blocks/cite";
 @import "blocks/subscribe";
-@import "blocks/feedback";
+@import "blocks/questions";
 @import "blocks/modal";
 @import "blocks/button";
 @import "blocks/close-button";
