--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,6 +6,7 @@ $medium_black: #1d1613;
 $basic_grey: #9b9997;
 $light_grey: #f0eae4;
 $border_grey: #f6f5f4;
+$scale_color: #f0eae4;
 // fonts
 $caption-font: "Cormorant Garamond", "Times New Roman", serif;
 $text-font: "Poppins", "Arial", sans-serif;
