--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -15,6 +15,13 @@
 @import "blocks/slider";
 @import "blocks/blog";
 @import "blocks/inst";
+@import "blocks/intro";
+@import "blocks/goods";
+@import "blocks/filter";
+@import "blocks/slider-control";
+@import "blocks/catalog-content";
+@import "blocks/catalog-slider";
+@import "blocks/range";
 @import "blocks/cite";
 @import "blocks/subscribe";
 @import "blocks/questions";
