--- a/source/sass/blocks/catalog-content.scss
+++ b/source/sass/blocks/catalog-content.scss
@@ -3,4 +3,10 @@
   display: grid;
   grid-template-columns: 1fr 3fr;
   grid-gap: 50px;
+
+  @media (max-width: $desktop-width) {
+    display: flex;
+    flex-direction: column;
+    @include padding(50px,40px);
+  }
 }
