--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -4,14 +4,17 @@
   grid-column-gap: 88px;
 
   @media (max-width: $desktop-width) {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-template-areas:
       "sub sub"
       "cite socials";
+    padding-right: 100px;
+    grid-column-gap: 0;
   }
 
   @media (max-width: $tablet-width) {
     display: flex;
     flex-direction: column;
+    padding-right: 15px;
   }
 }
