--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -24,6 +24,7 @@
   border-bottom: 1px solid $basic_white;
   width: 100%;
   padding-bottom: 15px;
+  color: $basic_grey;
 
   &::placeholder {
     @include text(14px, 21px, 500);
