Заверстала модальное окно логина

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,6 +27,6 @@
 @import "blocks/cite";
 @import "blocks/subscribe";
 @import "blocks/questions";
-@import "blocks/modal";
+@import "blocks/modal-login";
 @import "blocks/button";
 @import "blocks/close-button";
