--- a/source/sass/blocks/subscribe.scss
+++ b/source/sass/blocks/subscribe.scss
@@ -16,21 +16,23 @@
 
 .subscribe__field {
   position: relative;
-}
 
-.subscribe__field > input {
-  border: none;
-  background-color: transparent;
-  border-bottom: 1px solid $basic_white;
-  width: 100%;
-  padding-bottom: 15px;
-  color: $basic_grey;
-
-  &::placeholder {
-    @include text(14px, 21px, 500);
+  & > input {
+    border: none;
+    background-color: transparent;
+    border-bottom: 1px solid $basic_white;
+    width: 100%;
+    padding-bottom: 15px;
     color: $basic_grey;
+
+    &::placeholder {
+      @include text(14px, 21px, 500);
+      color: $basic_grey;
+    }
   }
 }
+
+
 
 .subscribe__button {
   @include text(16px, 21px, 500);
