--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,5 +28,6 @@
 @import "blocks/subscribe";
 @import "blocks/questions";
 @import "blocks/modal-login";
+@import "blocks/modal-card";
 @import "blocks/button";
 @import "blocks/close-button";
