--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -65,6 +65,10 @@
 }
 
 .card__button {
+  display: block;
+  padding-top: 28px;
+  text-align: center;
+  text-decoration: none;
   width: 100%;
   min-height: 68px;
   border: none;
