--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -61,6 +61,7 @@
 .questions__wrapper > h3 {
   @include text(18px, 23px, 500);
   font-family: $text-font;
+  margin-bottom: 0;
 }
 
 .questions__button {
