--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -17,13 +17,12 @@
 }
 
 .blog__list {
-  columns: 2;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr;
-  // grid-template-areas:
-  //   "care trend"
-  //   "power trend";
-  // grid-gap: 30px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "care trend"
+    "power trend";
+  grid-gap: 30px;
   @include padding(60px, 130px);
 
   @media (max-width: $desktop-width) {
@@ -36,19 +35,19 @@
   cursor: pointer;
   margin-bottom: 30px;
   background-color: $light_grey;
-  // margin-right: 30px;
-  // grid-area: care;
+  grid-area: care;
+  margin: 0;
 
   @media (max-width: $desktop-width) {
     margin-bottom: 50px;
   }
 
   &:nth-child(3n+2) {
-    // grid-area: power;
+    grid-area: power;
   }
 
   &:nth-child(3n+3) {
-    // grid-area: trend;
+    grid-area: trend;
   }
 
   &:hover,
@@ -141,143 +140,3 @@
     }
   }
 }
-
-// .types {
-//   background-color: $navy_blue;
-//   color: $basic_white;
-//   padding-top: 57px;
-//   padding-bottom: 106px;
-
-//   @media (max-width: $desktop-width) {
-//     padding-bottom: 18px;
-//     padding-top: 23px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     padding-bottom: 18px;
-//     padding-top: 26px;
-//   }
-// }
-
-// .types__wrapper > h2 {
-//   @include text(36px, 51px, 400);
-//   margin-bottom: 54px;
-
-//   @media (max-width: $desktop-width) {
-//     @include text(32px, 45px, 400);
-//     padding-right: 86px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     @include text(28px, 39px, 400);
-//     padding-right: 0;
-//     padding-left: 10px;
-//     margin-bottom: 42px;
-//   }
-// }
-
-// .types__list {
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-//   gap: 2%;
-//   row-gap: 20px;
-
-//   @media (max-width: $desktop-width) {
-//     flex-direction: column;
-//   }
-// }
-
-// .types__item {
-//   position: relative;
-//   display: block;
-//   width: 32%;
-
-//   @media (max-width: $desktop-width) {
-//     width: 100%;
-//     max-height: 256px;
-//     margin-bottom: 44px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     margin-bottom: 30px;
-//   }
-
-//   &:hover {
-//     opacity: 0.5;
-//   }
-// }
-
-// .types__link {
-//   text-decoration: none;
-// }
-
-// .types__link > p {
-//   @include pseudo($display: block, $pos: absolute, $content: "");
-//   @include text(20px, 30px, 400);
-//   font-family: $caption-font;
-//   width: 173px;
-//   color: $basic_white;
-//   top: 30px;
-//   left: 44px;
-
-//   @media (max-width: $desktop-width) {
-//     top: 17px;
-//     width: 172px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     top: 0;
-//     left: 36px;
-//   }
-// }
-
-// .types__item--lighting p {
-//   @media (max-width: $desktop-width) {
-//     top: 30px;
-//   }
-
-//   @media (max-width: $tablet-width) {
-//     top: 11px;
-//   }
-// }
-
-// .types__link img {
-//   opacity: 0.2;
-
-//   @media (max-width: $desktop-width) {
-//     width: 100%;
-//     max-height: 256px;
-//   }
-// }
-
-// .types__link::before {
-//   @include pseudo($display: block, $pos: absolute, $content: "");
-//   width: 63px;
-//   height: 63px;
-//   z-index: 1;
-//   background-color: $basic_color;
-//   bottom: 4px;
-//   right: 0;
-
-//   @media (max-width: $tablet-width) {
-//     bottom: 0;
-//   }
-// }
-
-// .types__link::after {
-//   @include pseudo($display: block, $pos: absolute, $content: "");
-//   bottom: 30px;
-//   right: 27px;
-//   z-index: 2;
-//   width: 7.4px;
-//   height: 7.4px;
-//   border-top: 1px solid $basic_white;
-//   border-right: 1px solid $basic_white;
-//   transform: rotate(45deg);
-
-//   @media (max-width: $tablet-width) {
-//     bottom: 27px;
-//     right: 30px;
-//   }
-// }
