--- a/source/sass/blocks/info.scss
+++ b/source/sass/blocks/info.scss
@@ -6,7 +6,7 @@
   background-size: cover;
   background-color: $basic_color;
   overflow: hidden;
-  @include padding(195px,195px);
+  @include padding(180px, 188px);
 
   @media (min-resolution: 2dppx) {
     background-image: url("../img/intro-main-desktop-2x.jpg");
@@ -33,24 +33,26 @@
 
 .info__wrapper {
   text-align: center;
-}
 
-.info__wrapper > h1 {
-  @include text(45px, 58px, 700);
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+  &>h1 {
+    @include text(45px, 58px, 700);
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    margin-bottom: -4px;
 
-  @media (max-width: $tablet-width) {
-    @include text(38px, 48px, 700);
+    @media (max-width: $tablet-width) {
+      @include text(38px, 48px, 700);
+    }
   }
-}
 
-.info__wrapper > p {
-  @include text(38px, 49px, 400);
-  font-family: $caption-font;
-  font-style: italic;
+  &>p {
+    @include text(38px, 49px, 400);
+    font-family: $caption-font;
+    font-style: italic;
+    margin: 0;
 
-  @media (max-width: $tablet-width) {
-    @include text(34px, 44px, 400);
+    @media (max-width: $tablet-width) {
+      @include text(34px, 44px, 400);
+    }
   }
 }
