--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -43,13 +43,15 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
   position: relative;
 }
 
 .page__logo {
   order: 2;
+  // flex-basis: 70%;
   margin-left: auto;
-  margin-bottom: 19px;
+  margin-bottom: 18px;
 
   @media (max-width: $desktop-width) {
     margin: 0 auto;
@@ -58,6 +60,8 @@
 
 .page__logo svg {
   fill: $basic_color;
+  // margin: 0 auto;
+  // display: block;
 
   @media (max-width: $desktop-width) {
     width: 52px;
@@ -136,6 +140,8 @@
 
   & input {
     border: none;
+    padding-left: 12px;
+    @include text(14px, 21px, 500);
 
     @media (max-width: $desktop-width) {
       width: 100%;
@@ -215,7 +221,7 @@
 .page__cart,
 .page__search {
   @include text(14px, 21px, 500);
-  padding-top: 17px;
+  padding-top: 12px;
   cursor: pointer;
 
   @media (max-width: $desktop-width) {
